# local-bin

./: .gitignore  README.md  ai-story  ai_readme  aliasman  depcheck  epcheck  epcheck-bash  epcheck-rust-binary  epcheck-rust-release  extract_conn_string.sh  gcm  labelai  lintstaged  lspkg  lspkg-bash  nuget-setup  performance-analysis.md  prm  sbd  sbd.sh  setup.sh  testbench-tui  usersecrets  usersecrets-bash
epcheck/: Cargo.toml
epcheck-rust/src/: analyzer.rs  lib.rs  scanner.rs
epcheck-src/: Cargo.toml  epcheck
epcheck-src/src/: analyzer.rs  cli.rs  lib.rs  main.rs  output.rs  scanner.rs
epcheck-src/testbench-tui/: Cargo.toml  schema.sql
epcheck-src/testbench-tui/src/: app.rs  db.rs  main.rs
epcheck/src/: openapi.rs
lspkg/: Cargo.toml
lspkg-src/: Cargo.toml  lspkg
lspkg/src/: main.rs
scripts/: nuget-setup.sh  slack-pr-message.sh  start.sh
testbench/: README.md
testbench/v1.0/: normalized_output.txt  run-tests.sh  test-browser.sh
testbench/v1.0/results/: summary.txt  test-basic-error.txt  test-basic-output.normalized  test-basic-output.txt  test-basic-time.txt  test-complex-error.txt  test-complex-output.txt  test-edge-cases-output.txt  test-edge-cases-time.txt  test-options-error.txt  test-options-output.txt  test-performance-error.txt  test-performance-output.txt  testbench.db
testbench/v1.0/test-basic/: config.json  expected-table.txt  normalized.txt  openapi.json  output.txt
testbench/v1.0/test-complex/: config.json  openapi.yaml
testbench/v1.0/test-edge-cases/: config.json  empty-spec.json  no-usage-spec.json
testbench/v1.0/test-options/: config.json  expected-table.txt  openapi.json
testbench/v1.0/test-performance/: config.json  large-spec.json
testbench/v1.0/test-url/: actual_output.txt  (+2 more)
usersecrets/: Cargo.toml
usersecrets-src/: Cargo.toml  usersecrets
usersecrets/src/: main.rs
(+12 files in other folders)
