[package]
name = "epcheck"
version = "0.1.0"
edition = "2021"
description = "Fast OpenAPI endpoint usage checker"
authors = ["Your Name <your.email@example.com>"]

[dependencies]
# OpenAPI parsing
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.7"

# CLI
clap = { version = "3.2", features = ["derive"] }

# File operations
walkdir = "2.4"
ignore = "0.4"

# Regex and text processing
regex = "1.10"
fancy-regex = "0.13"

# Async runtime
tokio = { version = "1.0", features = ["full"] }



# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Date/time formatting
chrono = { version = "0.4", features = ["serde"] }

# Performance monitoring
once_cell = "1.19"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"