[package]
name = "usersecrets"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
walkdir = "2.3"
roxmltree = "0.18"
uuid = { version = "1.0", features = ["v4"] }
dirs = "5.0"
